# Materijali-sa-vezbi

./: README.md  make_full.py  pyproject.toml
2021_2022/live/: 01_linear_regression.ipynb  02_fuzzy_logic.ipynb  03_s_metaheuristics.ipynb  04_linear_programming.ipynb  05_gradient_descent.ipynb  06_branch_and_bound.ipynb  07_genetic_algorithm.ipynb  08_genetic_programming.ipynb  09_particle_swarm_optimization.ipynb  10_fully_connected_neural_networks.ipynb  11_convolutional_neural_networks.ipynb
2022_2023/live/01_linear_regression/: 01.ipynb
2022_2023/live/02_fuzzy_logic/: 02.ipynb
2022_2023/live/03_s_metaheuristics/: 03.ipynb
2022_2023/live/04_integer_linear_programming/: 04.ipynb
2022_2023/live/05_variants_of_gradient_descent/: 05.ipynb
2022_2023/live/06_genetic_algorithm/: 06.ipynb
2022_2023/live/07_genetic_programming/: 07.ipynb
2022_2023/live/08_particle_swarm_optimization/: 08.ipynb
2022_2023/live/10_fully_connected_neural_networks/: 10.ipynb
2022_2023/live/11_convolutional_neural_networks/: cnns_and_transfer_learning.ipynb
2022_2023/live/12_autoencoders/: ae.ipynb  vae.ipynb
2023_2024/live/01_linear_regression/: 01.ipynb
2023_2024/live/02_fuzzy_logic/: 02.ipynb
2023_2024/live/03_s_metaheuristics/: 03.ipynb
2023_2024/live/04_integer_linear_programming/: 04.ipynb
2024_2025/live/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb  05.ipynb  06.ipynb  07.ipynb  08.ipynb  09.ipynb  10.ipynb  11.ipynb  zadaci_za_vezbanje.ipynb
2025_2026/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb  05.ipynb  06.ipynb  07.ipynb  08.ipynb  09.ipynb  uflp_utils.py
(+8 files in other folders)
