[project]
name = "materijali-sa-vezbi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asttokens>=3.0.1",
    "comm>=0.2.3",
    "contourpy>=1.3.3",
    "cplex==22.1.1.2",
    "cycler>=0.12.1",
    "debugpy>=1.8.17",
    "decorator>=5.2.1",
    "docplex>=2.30.251",
    "executing>=2.2.1",
    "fonttools>=4.60.1",
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "ipython-pygments-lexers>=1.1.1",
    "jedi>=0.19.2",
    "joblib>=1.5.2",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.9.1",
    "kiwisolver>=1.4.9",
    "matplotlib>=3.10.7",
    "matplotlib-inline>=0.2.1",
    "nest-asyncio>=1.6.0",
    "networkx>=3.6.1",
    "numpy>=2.3.5",
    "packaging>=25.0",
    "pandas>=2.3.3",
    "parso>=0.8.5",
    "pexpect>=4.9.0",
    "pillow>=12.0.0",
    "platformdirs>=4.5.0",
    "prompt-toolkit>=3.0.52",
    "psutil>=7.1.3",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pygments>=2.19.2",
    "pyparsing>=3.2.5",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2025.2",
    "pyzmq>=27.1.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "six>=1.17.0",
    "stack-data>=0.6.3",
    "threadpoolctl>=3.6.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "tornado>=6.5.2",
    "tqdm>=4.67.2",
    "traitlets>=5.14.3",
    "typing-extensions>=4.15.0",
    "tzdata>=2025.2",
    "wcwidth>=0.2.14",
]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.ruff]
line-length = 100
